--- a/src/sass/components/_customer-revievs.scss
+++ b/src/sass/components/_customer-revievs.scss
@@ -1,11 +1,14 @@
 .section-customer-reviews {
   padding-top: 178px;
+  padding-bottom: 417px;
 
   @media screen and (min-width: 768px) {
     padding-top: 283px;
+    padding-bottom: 423px;
   }
   @media screen and (min-width: 1200px) {
     padding-top: 464px;
+    padding-bottom: 272px;
   }
 }
 
