--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -104,14 +104,6 @@ button {
     width: 100wv;
   }
 }
-@media screen and (min-width: 768px) {
-  .header {
-    display: flex;
-    gap: 32px;
-    align-items: center;
-    justify-content: center;
-  }
-}
 
 .header__mobile {
   display: flex;
@@ -172,11 +164,8 @@ button {
 }
 .header__button:focus {
   background-color: #0a8817;
-  color: #fff;
-  fill: #fff;
-}
-.header__button:disabled {
-  background-color: #ababab;
+  color: #ffffff;
+  fill: #ffffff;
 }
 @media screen and (max-width: 767px) {
   .header__button {
@@ -298,9 +287,12 @@ button {
   content: " ";
   height: 50px;
   width: 50px;
-  background-repeat: no-repeat;
-  background-size: cover;
   margin-bottom: 16px;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  background-color: #f8d24e;
 }
 @media screen and (min-width: 768px) {
   .advantages-list__tittle::before {
@@ -363,27 +355,23 @@ button {
 }
 
 .contacts {
-  position: relative;
-  top: 1080px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
 }
 @media screen and (max-width: 767px) {
   .contacts {
-    padding-top: 20px;
-    padding-bottom: 30px;
+    top: 133%;
   }
 }
 @media screen and (min-width: 768px) {
   .contacts {
-    padding-top: 40px;
-    padding-bottom: 20px;
-    top: 340px;
+    top: 101%;
   }
 }
 @media screen and (min-width: 1200px) {
   .contacts {
-    padding-top: 50px;
-    padding-bottom: 60px;
-    top: 580px;
+    top: 118%;
   }
 }
 
@@ -1445,6 +1433,17 @@ button {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 32px;
+}
+@media screen and (min-width: 768px) {
+  .about__topic {
+    margin-bottom: 72px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__topic {
+    margin-bottom: 82px;
+  }
 }
 
 .about__label {
@@ -1477,7 +1476,6 @@ button {
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #fcfcfc;
-  margin-bottom: 32px;
 }
 @media screen and (max-width: 767px) {
   .about__title {
@@ -1489,14 +1487,12 @@ button {
     font-size: 34px;
     line-height: 1.26;
     letter-spacing: 0.06em;
-    margin-bottom: 72px;
   }
 }
 @media screen and (min-width: 1200px) {
   .about__title {
     font-size: 36px;
     line-height: 1.25;
-    margin-bottom: 82px;
   }
 }
 
@@ -1678,6 +1674,11 @@ button {
   color: #ffffff;
   border: 2px solid #0a8817;
   fill: #ffffff;
+}
+
+.about__btn:hover,
+.about__btn:focus {
+  transition: 250ms linear;
 }
 
 .about__btn--text {
@@ -2434,20 +2435,40 @@ textarea {
   position: relative;
   padding-top: 38px;
   padding-bottom: 236px;
-  background-image: url("../images/hero/hero-dots/dots_mobile.png");
+  background-image: url("../images/hero/hero-dots/mobile@1x.png");
+  background-size: 320px 50px;
   background-repeat: no-repeat;
-  background-position: bottom 0px center;
+  background-position: bottom 0px left 50%;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero__container {
+    background-image: url("../images/hero/hero-dots/mobile@2x.png");
+  }
 }
 @media screen and (min-width: 768px) {
   .hero__container {
+    padding-top: 4px;
     padding-bottom: 24px;
     background-image: url("../images/hero/hero-dots/tablet@1x.png");
+    background-size: 768px 68px;
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero__container {
+    background-image: url("../images/hero/hero-dots/tablet@2x.png");
   }
 }
 @media screen and (min-width: 1200px) {
   .hero__container {
+    padding-top: 33px;
     padding-bottom: 103px;
-    background-image: url("../images/hero/hero-dots/dots_1200.png");
+    background-image: url("../images/hero/hero-dots/desktop@1x.png");
+    background-size: 1200px 384px;
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero__container {
+    background-image: url("../images/hero/hero-dots/desktop@2x.png");
   }
 }
 
@@ -2469,10 +2490,8 @@ textarea {
 .hero__title {
   margin-bottom: 32px;
   font-family: "Seymour One";
-  font-style: normal;
-  font-weight: 400;
   font-size: 26px;
-  line-height: 33px;
+  line-height: 1.2692307692;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #fcfcfc;
@@ -2488,7 +2507,7 @@ textarea {
     margin-bottom: 28px;
     max-width: 367px;
     font-size: 38px;
-    line-height: 48px;
+    line-height: 1.2631578947;
   }
 }
 
@@ -2499,7 +2518,7 @@ textarea {
 @media screen and (min-width: 1200px) {
   .hero__title-part {
     font-size: 38px;
-    line-height: 48px;
+    line-height: 1.2631578947;
   }
 }
 
@@ -2517,18 +2536,16 @@ textarea {
 .hero__products-link {
   padding: 11px 24px;
   cursor: pointer;
-  font-family: "Montserrat";
-  font-style: normal;
   font-weight: 600;
   font-size: 12px;
-  line-height: 15px;
+  line-height: 1.25;
   display: flex;
   align-items: center;
   text-align: center;
   color: #000000;
   border: 2px solid #f8d24e;
   border-radius: 8px;
-  transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1), border-color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero__products-link:hover {
   border-color: #0a8817;
@@ -2539,7 +2556,6 @@ textarea {
 @media screen and (min-width: 1200px) {
   .hero__products-link:focus {
     color: #fcfcfc;
-    border-color: #0a8817;
   }
 }
 .hero__products-link:disabled {
@@ -2549,24 +2565,22 @@ textarea {
   .hero__products-link {
     padding: 12px 32px;
     font-size: 14px;
-    line-height: 18px;
+    line-height: 1.2857142857;
     border-radius: 10px;
   }
 }
 
 .hero__made-link {
   cursor: pointer;
-  font-family: "Montserrat";
-  font-style: normal;
   font-weight: 600;
   font-size: 12px;
-  line-height: 15px;
+  line-height: 1.25;
   align-items: center;
   text-align: center;
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
   color: #f8d24e;
-  transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero__made-link:hover {
   color: #0a8817;
@@ -2590,12 +2604,12 @@ textarea {
 @media screen and (min-width: 1200px) {
   .hero__made-link {
     font-size: 14px;
-    line-height: 17px;
+    line-height: 1.2142857143;
   }
 }
 
 .hero__benefits {
-  margin-top: 14px;
+  padding-top: 14px;
 }
 @media screen and (max-width: 767px) {
   .hero__benefits {
@@ -2604,7 +2618,7 @@ textarea {
 }
 @media screen and (min-width: 1200px) {
   .hero__benefits {
-    margin-top: 8px;
+    padding-top: 8px;
   }
 }
 
@@ -2619,11 +2633,9 @@ textarea {
 
 .hero__benefits-numbers {
   margin-bottom: 4px;
-  font-family: "Montserrat";
-  font-style: normal;
   font-weight: 900;
   font-size: 28px;
-  line-height: 34px;
+  line-height: 1.2142857143;
   text-align: right;
   letter-spacing: 0.04em;
   text-transform: uppercase;
@@ -2632,60 +2644,72 @@ textarea {
 @media screen and (min-width: 1200px) {
   .hero__benefits-numbers {
     font-size: 46px;
-    line-height: 56px;
+    line-height: 1.2173913043;
   }
 }
 
 .hero__benefits-name {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
   font-size: 8px;
-  line-height: 10px;
+  line-height: 1.25;
   text-align: right;
   color: #fcfcfc;
 }
 @media screen and (min-width: 1200px) {
   .hero__benefits-name {
     font-size: 14px;
-    line-height: 17px;
+    line-height: 1.2142857143;
   }
 }
 
-.hero__text {
+.hero__text-box {
   max-width: 139px;
   margin-left: 184px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 140%;
-  /* or 17px */
-  color: #fcfcfc;
 }
 @media screen and (max-width: 767px) {
-  .hero__text {
+  .hero__text-box {
     display: none;
   }
 }
 @media screen and (min-width: 1200px) {
-  .hero__text {
+  .hero__text-box {
     max-width: 201px;
     margin-left: 241px;
-    font-size: 14px;
-    line-height: 20px;
   }
+}
+
+.hero__text {
+  font-size: 12px;
+  line-height: 1.4166666667;
+  color: #fcfcfc;
+}
+@media screen and (min-width: 1200px) {
+  .hero__text {
+    font-size: 14px;
+    line-height: 1.4285714286;
+  }
+}
+
+.hero__text-button {
+  display: block;
+  margin-top: 12px;
+  padding: 0;
+  background: none;
+  border: none;
+  color: #fcfcfc;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .hero__text-button {
+    margin-top: 24px;
+  }
+}
+.hero__text-button:hover, .hero__text-button:focus {
+  color: #000000;
 }
 
 .hero__text-arrow {
   display: block;
-  margin-top: 12px;
-  fill: #fcfcfc;
-}
-@media screen and (min-width: 1200px) {
-  .hero__text-arrow {
-    margin-top: 24px;
-  }
+  fill: currentColor;
 }
 
 .hero__fun-ice {
@@ -2819,15 +2843,18 @@ textarea {
 
 .section-customer-reviews {
   padding-top: 178px;
+  padding-bottom: 417px;
 }
 @media screen and (min-width: 768px) {
   .section-customer-reviews {
     padding-top: 283px;
+    padding-bottom: 423px;
   }
 }
 @media screen and (min-width: 1200px) {
   .section-customer-reviews {
     padding-top: 464px;
+    padding-bottom: 272px;
   }
 }
 
