забирає атрибут action у форми

--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -41,7 +41,7 @@
       <span>Vanilla sugar</span><span>10g</span>
     </li>
   </ul>
-  <form action="" class="ingredients-form">
+  <form class="ingredients-form">
     <ul class="ingredients-form__list">
       <li class="ingredients-form__item">
         <input
