--- a/src/partials/products_modal.html
+++ b/src/partials/products_modal.html
@@ -19,7 +19,7 @@
       <h3 class="products-modal__name">milkshakes</h3>
     </li>
   </ul>
-  <form action="" class="products-form">
+  <form class="products-form">
     <ul class="products-form__list">
       <li class="products-form__item">
         <input
