--- a/src/sass/components/_modal-ingredients.scss
+++ b/src/sass/components/_modal-ingredients.scss
@@ -8,6 +8,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  top: 0;
+  transform: translateX(-50%);
+  overflow-y: scroll;
   @media screen and (min-width: 768px) {
     width: 568px;
     height: 996px;
