--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -76,6 +76,6 @@
         >
       </li>
     </ul>
-    <button type="button" class="ingredients-form__btn">Submit</button>
+    <button type="submit" class="ingredients-form__btn">Submit</button>
   </form>
 </div>
