--- a/src/partials/products_modal.html
+++ b/src/partials/products_modal.html
@@ -52,6 +52,6 @@
         <label class="products-form__label" for="comment">Comment</label>
       </li>
     </ul>
-    <button type="button" class="products-form__btn">Submit</button>
+    <button type="submit" class="products-form__btn">Submit</button>
   </form>
 </div>
