--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -30,6 +30,6 @@
 // gallery
 @import './components/gallery';
 
-@import './components/customer-revievs';
+@import './components/customer';
 // modal about
 @import './components/modal-about';
