--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -22,6 +22,7 @@ $bg-colors: (
   'second-green': #97af8d,
   'prod-green': #aec6a5,
   'prod-yellow': #efd478,
+  'pagination': #d9d9d9,
   'green-circle': (
     linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)),
     #d9d9d9,
