--- a/src/partials/modal-backdrop.html
+++ b/src/partials/modal-backdrop.html
@@ -45,50 +45,52 @@
     We appreciate your patience.
   </p>
 
-  <ul class="franchise__form">
-    <li class="modal-form__item">
-      <input
-        class="modal-form__input"
-        type="text"
-        name="user-name"
-        id="user-name"
-        placeholder=" "
-      />
-      <label class="modal-form__label" for="name">Name</label>
-    </li>
-    <li class="modal-form__item">
-      <input
-        class="modal-form__input"
-        type="tel"
-        name="user-tel"
-        id="user-tel"
-        placeholder=" "
-      />
-      <label class="modal-form__label" for="tel">Phone</label>
-    </li>
-    <li class="modal-form__item">
-      <input
-        class="modal-form__input"
-        type="email"
-        name="user-mail"
-        id="user-mail"
-        placeholder=" "
-      />
-      <label class="modal-form__label" for="mail">Email</label>
-    </li>
-    <li class="modal-form__item">
-      <textarea
-        class="modal-form__textarea"
-        name="user-comment"
-        id="user-comment"
-        cols="3"
-        rows="4"
-        placeholder=" "
-      ></textarea>
-      <label class="modal-form__label" for="comment">Comment</label>
-    </li>
-  </ul>
-  <button class="button btn-franchise" type="submit">Submit</button>
+  <form>
+    <ul class="franchise__form">
+      <li class="modal-form__item">
+        <input
+          class="modal-form__input"
+          type="text"
+          name="user-name"
+          id="user-name"
+          placeholder=" "
+        />
+        <label class="modal-form__label" for="user-name">Name</label>
+      </li>
+      <li class="modal-form__item">
+        <input
+          class="modal-form__input"
+          type="tel"
+          name="user-tel"
+          id="user-tel"
+          placeholder=" "
+        />
+        <label class="modal-form__label" for="user-tel">Phone</label>
+      </li>
+      <li class="modal-form__item">
+        <input
+          class="modal-form__input"
+          type="email"
+          name="user-mail"
+          id="user-mail"
+          placeholder=" "
+        />
+        <label class="modal-form__label" for="user-mail">Email</label>
+      </li>
+      <li class="modal-form__item">
+        <textarea
+          class="modal-form__textarea"
+          name="user-comment"
+          id="user-comment"
+          cols="3"
+          rows="4"
+          placeholder=" "
+        ></textarea>
+        <label class="modal-form__label" for="comment">Comment</label>
+      </li>
+    </ul>
+    <button class="button btn-franchise" type="submit">Submit</button>
+  </form>
 </div>
 
 <!-- backdrop -->
