--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,7 +1,41 @@
 <section class="gallery">
     <div class="gallery__container">
         <h2 class="gallery__title visually-hidden">Gallery</h2>
-        <div class="gallery__thumb">
+        <div class="gallery__thumb swiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img class="swiper__card"
+                        srcset="
+                        ./images/gallery/main-ice/desktop/gallery-main_1013.jpg 1013w,
+                        ./images/gallery/main-ice/desktop/gallery-main_2026.jpg 2026w
+                        "
+                        sizes="(min-width: 1200px) 1013px"
+                        src="./images/gallery/main-ice/desktop/gallery-main_1013.jpg" 
+                        alt="ice card 1">
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="swiper__card"
+                        srcset="
+                        ./images/gallery/slide2/ice-gallery-changed_1013.jpg 1013w,
+                        ./images/gallery/slide2/ice-gallery-changed_2026.jpg 2026w
+                        "
+                        sizes="(min-width: 1200px) 1013px"
+                        src="./images/gallery/slide2/ice-gallery-changed_1013.jpg" 
+                        alt="ice card 2">
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="swiper__card"
+                        srcset="
+                        ./images/gallery/slide3/changed_1013.jpg 1013w,
+                        ./images/gallery/slide3/changed_2026.jpg 2026w
+                        "
+                        sizes="(min-width: 1200px) 1013px"
+                        src="./images/gallery/slide3/changed_1013.jpg" 
+                        alt="ice card 3">
+                  </div>
+                </div>
+        </div>
+        <!-- <div class="gallery__thumb">
             <img class="gallery__card"
                 srcset="
                 ./images/gallery/main-ice/mobile/main-ice_280.jpg 280w,
@@ -14,5 +48,6 @@
                 sizes="(min-width: 1200px) 1013px, (min-width: 768px) 704px, (min-width: 480px) 280px, 100vw"
                 src="./images/gallery/main-ice/mobile/main-ice_280.jpg" 
                 alt="ice main image">
-        </div>
+        </div> -->
     </div>
+</section>
