--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -5,7 +5,6 @@
      position: absolute;
      top:-32px;
      right: 50%;
-     z-index:100;
 
      transform: translateX(50%);
 
@@ -41,6 +40,8 @@
      }
 
      &__thumb {
+        width: 100%;
+        height:100%;
         border-radius: 8px;
         overflow: hidden;
 
@@ -63,5 +64,19 @@
            @media screen and (min-width: 1200px) {
              width: 1013px;
            }  
-         } 
+         }  
      }
+    .swiper {
+        width: 100%;
+        height:100%;
+        border-radius: 8px;
+        overflow: hidden;
+        //tablet screen
+    @media screen and (min-width: 768px) {
+        border-radius: 18px;
+        }
+       //desktop screen
+    @media screen and (min-width: 1200px) {
+        border-radius: 24px;
+        }
+    }
