--- a/src/partials/modal-about.html
+++ b/src/partials/modal-about.html
@@ -7,7 +7,7 @@
 
     <h2 class="modal-about__title">How it's made?</h2>
     <iframe class="modal-about__video" width="448" height="205" src="https://www.youtube.com/embed/8WEMZ86Eho8"
-        title="YouTube video player" frameborder="0"
+        title="YouTube video player"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
     <p class="modal-about__text">
