--- a/src/sass/components/_products_modal.scss
+++ b/src/sass/components/_products_modal.scss
@@ -193,7 +193,7 @@
     display: none;
   }
 
-  &:not(:placeholder-shown) + .products-form__label {
+  &:not(:placeholder-shown)  .products-form__label {
     display: none;
   }
 
