--- a/src/partials/customer.html
+++ b/src/partials/customer.html
@@ -4,7 +4,7 @@
         <div class="customers__swiper" >
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
+                    <div class="swiper-slide swiper__item">
                         <img class="swiper-image" 
                         srcset="
                                 ./images/cast-rev/lady/lady_85.jpg 85w,
@@ -19,11 +19,11 @@
                         In addition, you have beautiful serving, cozy atmosphere and polite staff.</p>
                         <span class="swiper-location">Emily, Los Angeles</span>
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide swiper__item">
                         <img class="swiper-image"
                         srcset="
                                 ./images/cast-rev/Black-man/black-man_97.jpg 97w,
-                                ./images/cast-rev/Black-man/black-man_97.jpg 194w
+                                ./images/cast-rev/Black-man/black-man_194.jpg 194w
                                 "
                         sizes="97px, 100vw"
                         
@@ -32,7 +32,7 @@
                         <p class="swiper-text">Every day we come to you with friends after classes in college. We love your ice cream and casual atmosphere!</p>
                         <span class="swiper-location" >Bryan, New-York</span>
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide swiper__item">
                         <img class="swiper-image"
                         srcset="
                                 ./images/cast-rev/fun-girl/fun-girl_91.jpg 91w,
