--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -3,7 +3,7 @@
      background-color: transparent;
  
      position: absolute;
-     top:-32px;
+    //  top:-32px;
      right: 50%;
 
      transform: translateX(50%);
@@ -43,7 +43,7 @@
      }
      }
 
-     &__thumb {
+     &__thumb, &__card {
 
         overflow: hidden;
     
@@ -67,7 +67,7 @@
         }
      }
     }
-     
+    
    .swiper {
     width: 100%;
     height: 100%;
