Fixing form labels

--- a/src/sass/components/_modal-ingredients.scss
+++ b/src/sass/components/_modal-ingredients.scss
@@ -175,7 +175,7 @@
     display: none;
   }
 
-  &:not(:placeholder-shown) + .ingredients-form__label {
+  &:not(:placeholder-shown)  .ingredients-form__label {
     display: none;
   }
 
