--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,11 +18,11 @@
     </a>
 
     <button
-      toggle
-      class="burger burger-toggle"
+      data-toggle
+      class="burger-toggle"
       aria-label="open menu"
-      aria-expanded="false">
-      
+      aria-expanded="false"
+    >
       <svg class="" width="32" height="32">
         <use class="burger" href="./images/svg/symbol-defs.svg#burger1"></use>
         <use
