--- a/src/partials/nav-menu.html
+++ b/src/partials/nav-menu.html
@@ -1,4 +1,4 @@
-<div menu class="nav-menu">
+<div data-menu class="nav-menu">
   <div class="upper">
     <a href="./"
       ><img
@@ -17,12 +17,12 @@
       />
     </a>
     <button
-      tablet-cross
-      class="burger burger-toggle"
+      data-tablet-cross
+      class="burger-toggle"
       aria-label="open menu"
       aria-expanded="false"
     >
-      <svg class="" width="32" height="32">
+      <svg class="burger-toggle__icon" width="32" height="32">
         <use
           class="tablet-cross"
           href="./images/svg/symbol-defs.svg#close-white"
@@ -35,16 +35,20 @@
       <a class="navigation__link" href="index.html">Home</a>
     </li>
     <li class="navigation__item">
-      <a nav-link1 class="navigation__link" href="#about">How it’s made?</a>
+      <a data-nav-link1 class="navigation__link" href="#about"
+        >How it’s made?</a
+      >
     </li>
     <li class="navigation__item">
-      <a nav-link2 class="navigation__link" href="#products">Our products</a>
+      <a data-nav-link2 class="navigation__link" href="#products"
+        >Our products</a
+      >
     </li>
     <li class="navigation__item">
-      <a nav-link3 class="navigation__link" href="#contacts">Contact</a>
+      <a data-nav-link3 class="navigation__link" href="#contacts">Contact</a>
     </li>
   </ul>
-  <button buy-button data-modal="3" class="nav-button js-open-modal">
+  <button data-buy-button data-modal="3" class="nav-button js-open-modal">
     Buy now
     <svg class="nav-button__icon" width="12" height="12">
       <use href="./images/svg/symbol-defs.svg#bird"></use>
