--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -8,14 +8,18 @@
 
      transform: translateX(50%);
 
-     //tablet screen
-     @media screen and (min-width: 768px) {
-        top: -144px;
-    }
-    //desktop screen
-    @media screen and (min-width: 1200px) {
-        top: -98px;
-    }
+        @media screen and (max-width: 767px) {
+            top:-32px;
+            }
+
+        //tablet screen
+        @media screen and (min-width: 768px) {
+            top: -144px;
+            }
+        //desktop screen
+        @media screen and (min-width: 1200px) {
+            top: -98px;
+            }
  
      &__container {
          margin: 0 auto;
@@ -23,7 +27,7 @@
          min-width: 320px;
          
      //mobile screen
-     @media screen and (min-width: 480px) {
+     @media screen and (max-width: 767px) {
          width: 320px;
      }
       //tablet screen
@@ -40,43 +44,31 @@
      }
 
      &__thumb {
-        width: 100%;
-        height:100%;
-        border-radius: 8px;
-        overflow: hidden;
 
+        overflow: hidden;
+    
+    @media screen and (max-width: 767px) {
+        width: 280px;
+        height: 130px;
+        border-radius: 8px;
+        }
+    
         //tablet screen
     @media screen and (min-width: 768px) {
-        border-radius: 18px;
-    }
-       //desktop screen
-    @media screen and (min-width: 1200px) {
-        border-radius: 24px;
-    }
-     }
-
-     &__card {
-         width: 280px;
- 
-         @media screen and (min-width: 768px) {
-             width: 704px;
-           }
-           @media screen and (min-width: 1200px) {
-             width: 1013px;
-           }  
-         }  
-     }
-    .swiper {
-        width: 100%;
-        height:100%;
-        border-radius: 8px;
-        overflow: hidden;
-        //tablet screen
-    @media screen and (min-width: 768px) {
+        width: 704px;
+        height: 327px;
         border-radius: 18px;
         }
        //desktop screen
     @media screen and (min-width: 1200px) {
+        width: 1013px;
+        height: 422px;
         border-radius: 24px;
         }
+     }
     }
+     
+   .swiper {
+    width: 100%;
+    height: 100%;
+   }
