--- a/src/sass/components/_products_modal.scss
+++ b/src/sass/components/_products_modal.scss
@@ -193,7 +193,7 @@
     display: none;
   }
 
-  &:not(:placeholder-shown)  .products-form__label {
+  &:not(:placeholder-shown) .products-form__label {
     display: none;
   }
 
@@ -245,7 +245,7 @@
   font-weight: 600;
   font-size: 12px;
   line-height: calc(15 / 12);
-  transition: background-color getAnim(time) getAnim(func);
+  // transition: background-color getAnim(time) getAnim(func);
   &:hover {
     background-color: getColor(active-green);
   }
