--- a/src/partials/modal-backdrop.html
+++ b/src/partials/modal-backdrop.html
@@ -20,7 +20,7 @@
 
   <a
     class="button btn-locations"
-    href="https://www.google.com/maps/place/%D0%9F%D0%BE%D0%BB%D1%82%D0%B0%D0%B2%D0%B0,+%D0%9F%D0%BE%D0%BB%D1%82%D0%B0%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+36000/@49.6020511,34.401354,12z/data=!3m1!4b1!4m13!1m7!3m6!1s0x40d825e5a6576a0d:0xcdfded8b7b40ec91!2z0J_QvtC70YLQsNCy0LAsINCf0L7Qu9GC0LDQstGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCAzNjAwMA!3b1!8m2!3d49.588267!4d34.5514169!3m4!1s0x40d825e425e6ba6b:0xcf3e6bdfb9e4ca82!8m2!3d49.5882636!4d34.5514226?hl=ru"
+    href="https://goo.gl/maps/Woap4gPAKNbALkccA"
     rel="nofollow noopener noreferrer"
     target="_blank"
     >Open map</a
