--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -35,6 +35,11 @@ a {
 button {
   font-family: inherit;
   cursor: pointer;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    transform: scale(1.1);
+  }
 }
 
 .container {
