--- a/src/sass/components/_backdrop-modal.scss
+++ b/src/sass/components/_backdrop-modal.scss
@@ -1,15 +1,15 @@
 .overlay {
+  position: fixed;
   opacity: 0;
   visibility: hidden;
 
-  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 20;
-  transition: 0.3s all;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -20,7 +20,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1000;
-  transition: 0.3s all;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal.active,
@@ -153,7 +153,7 @@
     display: none;
   }
 
-  &:not(:placeholder-shown) + .modal-form__label {
+  &:not(:placeholder-shown) .modal-form__label {
     display: none;
   }
 
@@ -189,7 +189,7 @@ textarea {
   padding: 12px 34px;
   border-color: transparent;
   margin-top: 32px;
-  transition: 250ms linear;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (max-width: 767px) {
     margin-top: 24px;
@@ -203,6 +203,12 @@ textarea {
   &:focus {
     background-color: getColor(active-green);
     color: getColor(primary-light);
+  }
+}
+
+.btn-locations {
+  &:hover {
+    transform: scale(1.1);
   }
 }
 
