--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -16,7 +16,6 @@
   @media screen and (max-width: 319px) {
     width: 100wv;
   }
-
 }
 
 .header__mobile {
@@ -66,9 +65,9 @@
   height: 42px;
   border-radius: 10px;
   border: transparent;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  // transition-property: background-color;
+  // transition-duration: 250ms;
+  // transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
     background-color: getColor(active-green);
