--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -275,7 +275,7 @@
   border: none;
   color: #fcfcfc;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: 1200px) {
     margin-top: 24px;
