--- a/src/sass/components/_customer.scss
+++ b/src/sass/components/_customer.scss
@@ -7,49 +7,37 @@ body {
 .customers__swiper {
     padding-top: 178px;
     padding-bottom: 393px;
-@media screen and (min-width:768px) {
-    padding-top: 283px;
-    padding-bottom: 379px;
-}
-@media screen and (min-width:1200px) {
-    padding-top: 464px;
-    padding-bottom: 228px;
-}
+
+    @media screen and (min-width:768px) {
+        padding-top: 283px;
+        padding-bottom: 379px;
+    }
+
+    @media screen and (min-width:1200px) {
+        padding-top: 464px;
+        padding-bottom: 228px;
+    }
 }
 
-.swiper-wrapper {
-    margin-bottom:12px;
-    height: 466px;
-    @media screen and (min-width:768px) {
-        height: 356px;
-    }
-    @media screen and (min-width:1200px) {
-        height: 361px;
-    }
+.swiper__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+
+    // height: 466px;
+    // @media screen and (min-width:768px) {
+    //     height: 356px;
+    //     }
+    //     @media screen and (min-width:1200px) {
+    //     height: 361px;
+    //     }
 }
+
 .swiper {
     width: auto;
     height: auto;
-}
-
-.swiper-slide {
-   display: flex;
-   flex-direction: column;
-   
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    gap: 32px;
 }
 
 .swiper-image {
@@ -65,14 +53,14 @@ body {
     height: 256px;
     padding: 35px 39px;
 
-    background:getBgColor(main-green);
+    background: getBgColor(main-green);
     border-radius: 10px;
 
     font-size: 12px;
 
     line-height: calc(31 / 12);
     letter-spacing: 0.04em;
-   
+
     text-align: center;
     color: getColor(primary-white);
 
@@ -95,31 +83,38 @@ body {
         line-height: calc(30 / 16);
     }
 }
+
 .swiper-location {
     font-weight: 500;
     font-size: 20px;
     line-height: calc(37 / 20);
-       
+
     text-align: center;
-    
-    color:getColor(primary-dark);
+
+    color: getColor(primary-dark);
 
     @media screen and (min-width:768px) {
         font-size: 16px;
         line-height: calc(30 / 16);
     }
-   
+
 }
 
+.swiper-pagination {
+    position: absolute;
+    left: 30px;
+}
 
 .swiper-pagination-bullet {
+
     width: 12px;
     height: 12px;
-    background-color:getBgColor(pagination);
+    background-color: getBgColor(pagination);
     opacity: 1;
-    border:none;
+    border: none;
     gap: 18px;
 }
+
 .swiper-pagination-bullet-active {
     background-color: getBgColor(main-green);
 }
