--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -116,3 +116,19 @@
     color: #f8d24e;
   }
 }
+
+.logo-mobile {
+width: 40px;
+height: 37px;
+
+  @media screen and (min-width:768px) {
+    width: 48px;
+    height: 44px;
+  }
+
+  @media screen and (min-width:1200px) {
+    width: 60px;
+    height: 55px;
+  }
+}
+
