--- a/src/partials/customer.html
+++ b/src/partials/customer.html
@@ -3,7 +3,7 @@
         <!-- Swiper -->
         <div class="customers__swiper">
             <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
+                <div class="swiper-wrapper swiper-content ">
                     <div class="swiper-slide swiper__item">
                         <img class="swiper-image" srcset="
                                 ./images/cast-rev/lady/lady_85.jpg 85w,
