--- a/src/partials/customer.html
+++ b/src/partials/customer.html
@@ -1,48 +1,36 @@
 <section class="customers">
     <div class="container">
         <!-- Swiper -->
-        <div class="customers__swiper" >
+        <div class="customers__swiper">
             <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
+                <div class="swiper-wrapper swiper-content ">
                     <div class="swiper-slide swiper__item">
-                        <img class="swiper-image" 
-                        srcset="
+                        <img class="swiper-image" srcset="
                                 ./images/cast-rev/lady/lady_85.jpg 85w,
                                 ./images/cast-rev/lady/lady_170.jpg 170w
-                                "
-                        sizes="85px, 100vw"
-                        src="./images/cast-rev/lady/lady_85.jpg"
-                        alt="lady"/>
+                                " sizes="85px, 100vw" src="./images/cast-rev/lady/lady_85.jpg" alt="lady" />
 
                         <p class="swiper-text">I love visiting your cafe.
-                        You prepare the most delicious ice cream in Los Angeles!
-                        In addition, you have beautiful serving, cozy atmosphere and polite staff.</p>
+                            You prepare the most delicious ice cream in Los Angeles!
+                            In addition, you have beautiful serving, cozy atmosphere and polite staff.</p>
                         <span class="swiper-location">Emily, Los Angeles</span>
                     </div>
                     <div class="swiper-slide swiper__item">
                         <img class="swiper-image"
-                        srcset="
-                                ./images/cast-rev/Black-man/black-man_97.jpg 97w,
-                                ./images/cast-rev/Black-man/black-man_194.jpg 194w
-                                "
-                        sizes="97px, 100vw"
-                        
-                        src="./images/cast-rev/Black-man/black-man_97.jpg"
-                        alt="black man" />
-                        <p class="swiper-text">Every day we come to you with friends after classes in college. We love your ice cream and casual atmosphere!</p>
-                        <span class="swiper-location" >Bryan, New-York</span>
+                            srcset="./images/cast-rev/Black-man/black-man_97.jpg 97w, ./images/cast-rev/Black-man/black-man_194.jpg 194w"
+                            sizes="97px, 100vw" src="./images/cast-rev/Black-man/black-man_97.jpg" alt="black man" />
+                        <p class="swiper-text">Every day we come to you with friends after classes in college. We love
+                            your ice cream and casual atmosphere!</p>
+                        <span class="swiper-location">Bryan, New-York</span>
                     </div>
                     <div class="swiper-slide swiper__item">
-                        <img class="swiper-image"
-                        srcset="
+                        <img class="swiper-image" srcset="
                                 ./images/cast-rev/fun-girl/fun-girl_91.jpg 91w,
                                 ./images/cast-rev/fun-girl/fun-girl_182.jpg 194w
-                                "
-                        sizes="91px, 100vw"
-                        
-                        src="./images/cast-rev/fun-girl/fun-girl_91.jpg" 
-                        alt="fun girl"/>
-                        <p class="swiper-text">Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like
+                                " sizes="91px, 100vw" src="./images/cast-rev/fun-girl/fun-girl_91.jpg"
+                            alt="fun girl" />
+                        <p class="swiper-text">Ice cream is my passion! I love your chocolate hazelnut ice cream! And I
+                            really like
                             the excellent service - always
                             served politely and quickly!</p>
                         <span class="swiper-location">Diana, Chicago</span>
@@ -51,6 +39,6 @@
                 <div class="swiper-pagination"></div>
             </div>
         </div>
-        <script src="./js/swiper-bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     </div>
 </section>
