--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -30,25 +30,25 @@
   }
 }
 
-.burger {
-  fill: getColor(primary-white);
-  padding-left: 0;
-  padding-right: 0;
-  display: flex;
-  align-items: center;
-  background-color: transparent;
-  border: none;
+// .burger {
+//   fill: getColor(primary-white);
+//   padding-left: 0;
+//   padding-right: 0;
+//   display: flex;
+//   align-items: center;
+//   background-color: transparent;
+//   border: none;
 
-  @media screen and (min-width: 1200px) {
-    display: none;
-  }
+//   @media screen and (min-width: 1200px) {
+//     display: none;
+//   }
 
-  @media screen and (min-width: 768px) {
-    gap: 440px;
-    justify-content: center;
-    align-items: center;
-  }
-}
+//   @media screen and (min-width: 768px) {
+//     gap: 440px;
+//     justify-content: center;
+//     align-items: center;
+//   }
+// }
 
 .header__button {
   font-weight: 600;
@@ -117,18 +117,17 @@
 }
 
 .logo-mobile {
-width: 40px;
-height: 37px;
+  width: 40px;
+  height: 37px;
 
-  @media screen and (min-width:768px) {
+  @media screen and (min-width: 768px) {
     width: 48px;
     height: 44px;
   }
 
-  @media screen and (min-width:1200px) {
+  @media screen and (min-width: 1200px) {
     width: 60px;
     height: 55px;
     padding-top: 10px;
   }
 }
-
