--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -122,28 +122,6 @@ button:hover {
   }
 }
 
-.burger {
-  fill: #ffffff;
-  padding-left: 0;
-  padding-right: 0;
-  display: flex;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-}
-@media screen and (min-width: 1200px) {
-  .burger {
-    display: none;
-  }
-}
-@media screen and (min-width: 768px) {
-  .burger {
-    gap: 440px;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
 .header__button {
   font-weight: 600;
   font-size: 14px;
@@ -199,6 +177,24 @@ button:hover {
 }
 .list__text:hover, .list__text:focus {
   color: #f8d24e;
+}
+
+.logo-mobile {
+  width: 40px;
+  height: 37px;
+}
+@media screen and (min-width: 768px) {
+  .logo-mobile {
+    width: 48px;
+    height: 44px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo-mobile {
+    width: 60px;
+    height: 55px;
+    padding-top: 10px;
+  }
 }
 
 .container-advantages {
@@ -2195,6 +2191,13 @@ textarea {
 }
 
 .burger-toggle {
+  color: #ffffff;
+  padding-left: 0;
+  padding-right: 0;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  border: none;
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 10;
 }
@@ -2207,6 +2210,18 @@ textarea {
 .burger-toggle:active {
   transform: scale(1.5);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .burger-toggle {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .burger-toggle {
+    gap: 440px;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .burger-toggle .cross {
   display: none;
@@ -2224,8 +2239,12 @@ textarea {
   position: absolute;
   top: -32px;
   right: 50%;
-  z-index: 100;
   transform: translateX(50%);
+}
+@media screen and (max-width: 767px) {
+  .gallery {
+    top: -32px;
+  }
 }
 @media screen and (min-width: 768px) {
   .gallery {
@@ -2242,7 +2261,7 @@ textarea {
   padding: 0px 20px;
   min-width: 320px;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .gallery__container {
     width: 320px;
   }
@@ -2261,31 +2280,33 @@ textarea {
   }
 }
 .gallery__thumb {
-  border-radius: 8px;
   overflow: hidden;
+}
+@media screen and (max-width: 767px) {
+  .gallery__thumb {
+    width: 280px;
+    height: 130px;
+    border-radius: 8px;
+  }
 }
 @media screen and (min-width: 768px) {
   .gallery__thumb {
+    width: 704px;
+    height: 327px;
     border-radius: 18px;
   }
 }
 @media screen and (min-width: 1200px) {
   .gallery__thumb {
+    width: 1013px;
+    height: 422px;
     border-radius: 24px;
   }
 }
-.gallery__card {
-  width: 280px;
-}
-@media screen and (min-width: 768px) {
-  .gallery__card {
-    width: 704px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .gallery__card {
-    width: 1013px;
-  }
+
+.swiper {
+  width: 100%;
+  height: 100%;
 }
 
 html,
