advantages(thin cow)

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,6 +3,11 @@
     <h2 class="visually-hidden">advantages</h2>
     <ul class="advantages-list">
       <li class="advantages-list__item advantages-list__item--first">
+        <div class="icon-advantages">
+          <svg width="50" height="50">
+            <use href="./images/svg/symbol-defs.svg#feature1"></use>
+          </svg>
+        </div>
         <h3 class="advantages-list__tittle advantages-list__tittle--first">
           721
         </h3>
@@ -11,6 +16,11 @@
         </p>
       </li>
       <li class="advantages-list__item advantages-list__item--second">
+        <div class="icon-advantages">
+          <svg width="50" height="50">
+            <use href="./images/svg/symbol-defs.svg#feature2"></use>
+          </svg>
+        </div>
         <h3 class="advantages-list__tittle advantages-list__tittle--second">
           16kg
         </h3>
@@ -19,6 +29,11 @@
         </p>
       </li>
       <li class="advantages-list__item advantages-list__item--third">
+        <div class="icon-advantages">
+          <svg width="50" height="50">
+            <use href="./images/svg/symbol-defs.svg#feature3"></use>
+          </svg>
+        </div>
         <h3 class="advantages-list__tittle advantages-list__tittle--third">
           84
         </h3>
