--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,7 @@
   </div>
   <ul class="header__list">
     <li>
-      <a href="https://saveana.github.io/ice-cream/" class="list__text">Home</a>
+      <a href="./index.html" class="list__text">Home</a>
     </li>
     <li><a href="#about" class="list__text">How it’s made?</a></li>
     <li><a href="#products" class="list__text">Our products</a></li>
